--- a/toyFactory/templates/base.html
+++ b/toyFactory/templates/base.html
@@ -8,8 +8,10 @@
     <a href="{%url 'home' %}">Главная</a>
     {% if request.user.is_authenticated %}
             <li> {{user.username}} | <a href="{% url 'logout' %}">Выйти</a></li>
-            <a href="{%url 'user_orders' pk=request.user.pk %}" class="button">Текущие заказы</a>
-            <a href="{% url 'add_review' %}"><li>Оставить отзыв</li></a>
+            {% comment %} {% if MyUser.objects.first().filter(username=request.user.username).role != 'customer' %} {% endcomment %}
+                {% comment %} <a href="{%url 'orders'%}" class="button">Текущие заказы</a> {% endcomment %}
+            <a href="{%url 'add_review' %}"><li>Оставить отзыв</li></a>
+            {% comment %} {% endif %} {% endcomment %}
     {% else %}
             <a href="{% url 'register_customer' %}"><li>Регистрация для клиентов</li></a>
             <a href="{% url 'register_employee' %}"><li>Регистрация для сотрудников</li></a>
