--- a/toyFactory/templates/orders.html
+++ b/toyFactory/templates/orders.html
@@ -5,13 +5,9 @@
 {% block content %}
 {% for order in orders %}
     <div>
-        <h2>number: {{ order.number }}</h2>
-        <p>price: ${{ order.price }}</p>
-        <p>promo: {{ order.promo }}</p>
-        <p>active :{{ order.is_active }}</p>
-        <p>amount :{{ order.amount }}</p>
-        <p>date :{{ order.date }}</p>
-        <a href="{% url 'order' pk=order.pk %}" class="button">details</a>
+        <h2>Номер заказа: {{ order.number }}</h2>
+        <p>Стоимость: ${{ order.price }}</p>
+        <a href="{% url 'order_detail.html' number=order.number %}" class="button">details</a>
     </div>
 {% endfor %}
 {% endblock content %}
