--- a/toyFactory/templates/reviews.html
+++ b/toyFactory/templates/reviews.html
@@ -3,10 +3,10 @@
 {% block header %}Reviews{% endblock header %}
 
 {% block content %}
-    {% if request.user.is_authenticated %}
-    <form action="{% url 'add_review' %}" method="get">
-        <button type="submit">Leave a Review</button>
-    </form>
+    {% if request.user.is_authenticated and getUserRole == 'customer' %}
+        <form action="{% url 'add_review' %}" method="get">
+            <button type="submit">Leave a Review</button>
+        </form>
     {% endif %}
     {% for review_item in object_list %}
         <div>
