--- a/toyFactory/templates/warning_message.html
+++ b/toyFactory/templates/warning_message.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block title %}Warning message{% endblock title %}
-{% block header %}Warning message{% endblock header %}
+{% block title %}Info message{% endblock title %}
+{% block header %}Info message{% endblock header %}
 
 {% block content %}
     <p>{{ warning_message_text }}</p>
