--- a/toyFactory/templates/order_form.html
+++ b/toyFactory/templates/order_form.html
@@ -1,4 +1,4 @@
-<h1>Product Details</h1>
+<h1>Order Details</h1>
 <p>Name: {{ product.name }}</p>
 <p>Price: ${{ product.price }}</p>
 <p>Amount: {{ product.amount }}</p>
