--- a/toyFactory/templates/products.html
+++ b/toyFactory/templates/products.html
@@ -6,7 +6,10 @@
 {% for product in products %}
     <div>
         <p>name: {{ product.name }}
-        <p>category: {{ product.category }}
+        <p>categories:</p>
+        {% for category in product.category.all %}
+                <p> {{ category.name }} </p>
+        {% endfor %}
         <p>price: ${{ product.price }}</p>
         <p>amount: {{ product.amount }}</p>
         <p>producer:{{ product.employee.username }}</p>
