added order creation

--- a/toyFactory/templates/base.html
+++ b/toyFactory/templates/base.html
@@ -28,8 +28,8 @@
     {% endif %}
     <a href="{%url 'reviews' %}">Отзывы</a><br>
     <a href="{%url 'products' %}">Каталог товаров</a><br>
-    <a href="{%url 'vacancies' %}">Вакансии</a> | <a href="{%url 'about' %}">О компании</a> | <a href="{%url 'contacts' %}">Контакты</a><br>
-    <a href="{%url 'news' %}">Новости</a> | <a href="{%url 'terms' %}">FAQ</a><br>
+    <a href="{%url 'vacancies' %}">Вакансии</a> | <a href="{%url 'about' %}">О компании</a> | <a href="{%url 'contacts' %}">Контакты продавцов</a><br>
+    <a href="{%url 'terms' %}">FAQ</a><br>
     <a href="{%url 'privacy_policy' %}">Политика конфиденциальности</a>
     <br><br>
     <a href="{%url 'cat_facts' %}">Факты о котах</a> |
