added some hardcode media info

--- a/toyFactory/templates/privacy_policy.html
+++ b/toyFactory/templates/privacy_policy.html
@@ -3,5 +3,7 @@
 {% block header %}Privacy policy{% endblock header %}
 
 {% block content %}
-
+    <p>
+        Все права защищены 2024
+    </p>
 {% endblock content %}
