--- a/toyFactory/templates/base.html
+++ b/toyFactory/templates/base.html
@@ -23,6 +23,8 @@
             {% endif %}
             {% if not request.user.is_superuser %}
                 <a href="{%url 'profile' %}">Профиль</a><br>
+            {% else %}
+                <a href="{%url 'all_orders' %}"> Все заказы на сервере </a><br>
             {% endif %}
     {% else %}
             <a href="{% url 'register_customer' %}"><li>Регистрация для клиентов</li></a>
