--- a/toyFactory/templates/base.html
+++ b/toyFactory/templates/base.html
@@ -46,7 +46,8 @@
     <a href="{%url 'cat_facts' %}">Факты о котах</a> |
     <a href="{%url 'random_joke' %}">Случайная шутка</a>
     <br>
-    <a href="{%url 'statistics' %}">Статистика</a>
+    <a href="{%url 'statistics' %}">Статистика</a><br>
+    <a href="{%url 'demonstration' %}">Демонстрационная страница</a><br>
     <h1>{% block header %}{% endblock header %}</h1>
     <div>{% block content%}{% endblock content %}</div>
 </body>
